--- a/app/scripts/jsondata-config.json
+++ b/app/scripts/jsondata-config.json
@@ -1,10 +1,13 @@
 [
-'{{repeat(20)}}',
-{
-_id: '{{objectId()}}',
-name: '{{firstName()}} {{surname()}}',
-avatar: 'http://placehold.it/40x40',
-registered: '{{date(new Date(2014, 0, 1), new Date(), "YYYY-MM-ddThh:mm:ss Z")}}',
-excerpt: '{{lorem(15, "words")}}'
-}
+	'{{repeat(18)}}',
+	{
+		_id: '{{objectId()}}',
+		name: '{{firstName()}} {{surname()}}',
+		avatar: 'http://placehold.it/40x40',
+		registered: '{{date(new Date(2014, 0, 1), new Date(), "YYYY-MM-ddThh:mm:ss Z")}}',
+		excerpt: '{{lorem(15, "words")}}',
+		quantity:     '{{integer(1, 100)}}',
+		city: '{{city()}}',
+		country: '{{country()}}'
+	}
 ]
