--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,7 @@
     "angular-route": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-scroll": "~0.7.0",
-    "jquery-animatenumber": "~0.0.10"
+    "angular-scroll": "~0.7.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
